Add GitHub links to DESCRIPTION

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -17,3 +17,5 @@ VignetteBuilder: knitr
 Config/testthat/edition: 3
 Imports: 
     utils
+URL: https://github.com/jonocarroll/charcuterie
+BugReports: https://github.com/jonocarroll/charcuterie/issues
