--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,21 +7,18 @@ S3method(chars,default)
 S3method(format,chars)
 S3method(head,chars)
 S3method(intersect,chars)
-S3method(intersect,default)
 S3method(print,chars)
 S3method(rev,chars)
 S3method(setdiff,chars)
-S3method(setdiff,default)
 S3method(sort,chars)
 S3method(tail,chars)
 S3method(union,chars)
-S3method(union,default)
 S3method(unique,chars)
 export(chars)
 export(except)
-export(intersect)
-export(setdiff)
 export(string)
-export(union)
+importFrom(generics,intersect)
+importFrom(generics,setdiff)
+importFrom(generics,union)
 importFrom(utils,head)
 importFrom(utils,tail)
