--- a/NAMESPACE
+++ b/NAMESPACE
@@ -16,7 +16,10 @@ S3method(union,chars)
 S3method(unique,chars)
 export(chars)
 export(except)
+export(intersect)
+export(setdiff)
 export(string)
+export(union)
 importFrom(generics,intersect)
 importFrom(generics,setdiff)
 importFrom(generics,union)
