fix for CRAN added is_* functions

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -17,6 +17,10 @@ S3method(unique,chars)
 export(chars)
 export(except)
 export(intersect)
+export(is_alnum)
+export(is_letter)
+export(is_number)
+export(is_punct)
 export(setdiff)
 export(string)
 export(union)
