--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,6 +15,7 @@ S3method(tail,chars)
 S3method(union,chars)
 S3method(unique,chars)
 export(chars)
+export(count)
 export(except)
 export(intersect)
 export(is_alnum)
